# DigiMultiplyPy

./: 001.bat  002.bat  DigitMultiply.py  pyproject.toml
