[tool.poetry]
name = "digimultiplypy"
version = "0.1.0"
description = "this program designed to findout "multiplicative persistence champions" number of iterations a number could take we start multiplying the individual digits of a number for example 277777788888899"
authors = ["Shan Konduru <shankonduru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
